# voicemeeter-chroma

./: .gitignore  CMakeLists.txt  README.md
src/: addimport.cpp  launcher.cpp  setdll.cpp  shared.cpp  shared.h  utils.cpp  utils.h  vmchroma.yaml  vmchroma_patcher.ps1  vmtheme.cpp  vmtheme_patcher.ps1
src/addimport/: addimport.cpp
src/vmchroma/: config_manager.cpp  config_manager.hpp  utils.cpp  utils.hpp  vmchroma.cpp  vmchroma.rc  winapi_hook_defs.hpp  window_manager.cpp  window_manager.hpp
